--- a/app/src/main/res/layout/activity_weather__page_.xml
+++ b/app/src/main/res/layout/activity_weather__page_.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:textColor="@android:color/holo_red_dark"
         android:layout_height="wrap_content"
+        android:text="abab"
         android:textSize="20sp"/>
 
     <TextView
