--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,34 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/MainActivity_gray"
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/etEnterId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="Enter Account Id"
-        android:backgroundTint="@android:color/holo_blue_dark"/>
+        android:layout_width="322dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
 
-    <Button
+        android:layout_marginStart="-2dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:hint="Enter Location"
+        android:backgroundTint="@android:color/white"
+android:textColorHint="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        />
+
+
+    <ImageView
         android:id="@+id/btnRequestApi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_blue_dark"
-        android:layout_below="@+id/etEnterId"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="16dp"
+        android:layout_width="63dp"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="-6dp"
+        android:layout_marginTop="0dp"
+        android:layout_toRightOf="@+id/etEnterId"
         android:backgroundTint="@android:color/holo_orange_light"
-        android:text="Request API"/>
-
-
+        android:src="@drawable/search_image" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="20dp"
+        android:layout_margin="20dp"
         android:layout_below="@+id/btnRequestApi"/>
+
+
+
+
+
 
 
     <ProgressBar
