--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:hint="Enter Account Id"
+        android:hint="Enter Location"
         android:backgroundTint="@android:color/holo_blue_bright"/>
 
     <Button
