--- a/app/src/main/res/layout/second_activity_recycler_view_items.xml
+++ b/app/src/main/res/layout/second_activity_recycler_view_items.xml
@@ -1,25 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="15dp"
-    app:cardCornerRadius="4dp"
+    android:background="#0062FF"
     android:layout_height="wrap_content">
 
 
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:elevation="15dp"
+    app:cardCornerRadius="4dp"
+    android:layout_margin="8dp"
+    android:background="@android:color/white"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/llItemsTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tvGetWeatherStatusName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_gravity="center_horizontal"
             android:textColor="@android:color/holo_orange_light"/>
+
+            <ImageView
+                android:id="@+id/imGetWeatherStatusImage"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
 
 
         <TextView
@@ -41,5 +59,6 @@
 
     </LinearLayout>
 
-
 </androidx.cardview.widget.CardView>
+
+</LinearLayout>
