--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/etEnterId"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="Enter Location"
-        android:backgroundTint="@android:color/holo_blue_bright"/>
-
-    <Button
-        android:id="@+id/btnRequestApi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_blue_dark"
-        android:layout_below="@+id/etEnterId"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="16dp"
-        android:backgroundTint="@android:color/holo_orange_light"
-        android:text="Request API"/>
+        android:orientation="horizontal">
 
 
+        <EditText
+            android:id="@+id/etEnterId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.75"
+            android:hint="Enter Location"
+            android:layout_gravity="center_vertical"
+            android:textColor="#0062FF"
+            android:backgroundTint="#0062FF"
+            android:textColorHint="@android:color/holo_blue_dark"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+        <ImageView
+            android:id="@+id/btnRequestApi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:src="@drawable/ic_search"/>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/btnRequestApi"/>
-
-
-    <ProgressBar
-        android:layout_width="wrap_content"
-        style="?android:attr/progressBarStyle"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/progressBar"/>
+        android:layout_gravity="center_horizontal"
+        android:layoutAnimation="@anim/recycler_layout_animation" />
 
 
 
 
-</RelativeLayout>
-
-
-
+</LinearLayout>
 
