--- a/app/src/main/res/layout/second_activity_recycler_view_items.xml
+++ b/app/src/main/res/layout/second_activity_recycler_view_items.xml
@@ -2,63 +2,116 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#0062FF"
+    android:background="#10387D"
     android:layout_height="wrap_content">
 
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:elevation="15dp"
-    app:cardCornerRadius="4dp"
-    android:layout_margin="8dp"
-    android:background="@android:color/white"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:id="@+id/llItemsTextView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:elevation="15dp"
+        app:cardCornerRadius="4dp"
+        android:layout_margin="8dp"
+        android:background="@android:color/white"
+        android:layout_height="wrap_content">
+
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvGetWeatherStatusName"
-            android:layout_width="wrap_content"
+            android:id="@+id/llItemsTextView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textColor="@android:color/holo_orange_light"/>
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imGetWeatherStatusImage"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvGetWeatherStatusName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.90"
+                    android:textStyle="bold"
+                    android:layout_margin="30dp"
+                    android:textColor="@android:color/black"/>
+
+                <ImageView
+                    android:id="@+id/imGetWeatherStatusImage"
+                    android:layout_weight="0.10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"/>
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/black"/>
+
+
+
+            <TextView
+                android:id="@+id/tvMin_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/darker_gray"/>
+
+
+            <TextView
+                android:id="@+id/tvMax_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/darker_gray"/>
+
+
+            <TextView
+                android:id="@+id/tvWindDirection"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/darker_gray"/>
+
+
+            <TextView
+                android:id="@+id/tvWindSpeed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/darker_gray"/>
+
+
+            <TextView
+                android:id="@+id/tvAirPressure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/darker_gray"/>
+
+
+
+
+            <TextView
+                android:id="@+id/tvWindState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/darker_gray"/>
+
 
         </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/tvMin_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@android:color/holo_green_dark"/>
-
-
-        <TextView
-            android:id="@+id/tvMax_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@android:color/holo_blue_bright"/>
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
