--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#F16C55</color>
     <color name="colorPrimaryDark">#F16C55</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="light_gray">#94959A</color>
 </resources>
