--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/videoview"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"/>
 
     <LinearLayout
+        android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -15,30 +24,30 @@
 
         <EditText
             android:id="@+id/etEnterId"
-            android:layout_width="0dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.75"
             android:hint="Enter Location"
-            android:layout_gravity="center_vertical"
-            android:textColor="#0062FF"
-            android:backgroundTint="#0062FF"
-            android:textColorHint="@android:color/holo_blue_dark"
-            android:textStyle="bold"
-            android:textSize="16sp"/>
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:textSize="30sp" />
 
         <ImageView
             android:id="@+id/btnRequestApi"
             android:layout_width="wrap_content"
+            android:layout_marginStart="25sp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:src="@drawable/ic_search"/>
+
+            android:src="@drawable/ic_search" />
+
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/recyclerView"
+        android:layout_below="@+id/linear"
         android:layout_width="match_parent"
+        android:layout_margin="20dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:layoutAnimation="@anim/recycler_layout_animation" />
@@ -46,5 +55,5 @@
 
 
 
-</LinearLayout>
+</RelativeLayout>
 
