--- a/app/src/main/res/layout/recycler_view_items.xml
+++ b/app/src/main/res/layout/recycler_view_items.xml
@@ -26,7 +26,7 @@
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_gravity="center_horizontal"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/black"/>
 
 
         <TextView
