--- a/app/src/main/res/layout/second_activity_recycler_view_items.xml
+++ b/app/src/main/res/layout/second_activity_recycler_view_items.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#10387D"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#10387D">
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:elevation="15dp"
-        app:cardCornerRadius="4dp"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@android:color/white"
-        android:layout_height="wrap_content">
+        android:elevation="15dp"
+        app:cardCornerRadius="4dp">
 
 
         <LinearLayout
@@ -30,16 +30,16 @@
                     android:id="@+id/tvGetWeatherStatusName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.90"
-                    android:textStyle="bold"
                     android:layout_margin="30dp"
-                    android:textColor="@android:color/black"/>
+                    android:layout_weight="1.90"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/imGetWeatherStatusImage"
-                    android:layout_weight="0.10"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.10" />
 
             </LinearLayout>
 
@@ -48,66 +48,63 @@
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/black"/>
-
+                android:layout_margin="4dp"
+                android:textColor="@android:color/black" />
 
 
             <TextView
                 android:id="@+id/tvMin_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/darker_gray"/>
+                android:layout_margin="4dp"
+                android:textColor="@android:color/darker_gray" />
 
 
             <TextView
                 android:id="@+id/tvMax_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/darker_gray"/>
+                android:layout_margin="4dp"
+                android:textColor="@android:color/darker_gray" />
 
 
             <TextView
                 android:id="@+id/tvWindDirection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/darker_gray"/>
+                android:layout_margin="4dp"
+                android:textColor="@android:color/darker_gray" />
 
 
             <TextView
                 android:id="@+id/tvWindSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/darker_gray"/>
+                android:layout_margin="4dp"
+                android:textColor="@android:color/darker_gray" />
 
 
             <TextView
                 android:id="@+id/tvAirPressure"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/darker_gray"/>
-
-
+                android:layout_margin="4dp"
+                android:textColor="@android:color/darker_gray" />
 
 
             <TextView
                 android:id="@+id/tvWindState"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/darker_gray"/>
+                android:layout_margin="4dp"
+                android:textColor="@android:color/darker_gray" />
 
 
         </LinearLayout>
