Corrected some layout mistakes

--- a/app/src/main/res/layout/recycler_view_items.xml
+++ b/app/src/main/res/layout/recycler_view_items.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:elevation="12sp"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
