--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8DE0EA</color>
+    <color name="colorPrimary">#F16C55</color>
     <color name="colorPrimaryDark">#F16C55</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="light_blue">#82A1D6</color>
-    <color name="MainActivity_gray">#6C7980</color>
 </resources>
